--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tabs": "^1.1.12",
+    "@radix-ui/react-toast": "^1.2.14",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@tanstack/react-table": "^8.21.3",
     "class-variance-authority": "^0.7.1",
